# base-django-project

./: .gitignore  README.md  pyproject.toml
src/: Makefile
src/assets/ui/: bun.lockb  index.html  package.json  tailwind.config.ts  vite.config.ts
src/assets/ui/publish/: index.html
src/assets/ui/src/: main.js
src/project/: asgi.py  settings.py  urls.py  wsgi.py
src/templates/: home.html
src/templates/shared/: _base.html
