[tool.poetry]
name = "base-django-setup"
version = "0.1.0"
description = ""
authors = ["Teodor Kostadinov <xxx@xxx.xxx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.7"
django-htmx = "^1.17.0"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.2.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
